src/test/deca/context/invalid/homemade/duplicate_classes.deca
// Trying to create the same class twice

class A {
}

class A {
}